--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "cppdbg",
             "request": "launch",
             "program": "${workspaceFolder}/MCPwB.elf",
-            "args": ["instances/a36.txt", "50"],
+            "args": ["instances/a36.txt", "50", "true"],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
             "environment": [],
