Encapsular lista de tipos de leche en una clase
Signed-off-by: angie <angheloalf95@gmail.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -69,6 +69,19 @@
         "ratio": "cpp",
         "mutex": "cpp",
         "stop_token": "cpp",
-        "thread": "cpp"
+        "thread": "cpp",
+        "cassert": "cpp",
+        "cerrno": "cpp",
+        "cfloat": "cpp",
+        "ciso646": "cpp",
+        "climits": "cpp",
+        "filesystem": "cpp",
+        "ios": "cpp",
+        "locale": "cpp",
+        "queue": "cpp",
+        "stack": "cpp",
+        "cstdbool": "cpp",
+        "config": "cpp",
+        "export": "cpp"
     }
 }
